added: first use fill profile, contact info, about info

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
             "Tests\\": "tests/"
         },
         "files": [
-            "app/Helpers/bot/Processes.php"
+            "app/Helpers/bot/Processes.php",
+            "app/Helpers/bot/Messages.php"
         ]
     },
     "scripts": {
